--- a/src/AspNetIdentitySample.WebApplication/AspNetIdentitySample.WebApplication.csproj
+++ b/src/AspNetIdentitySample.WebApplication/AspNetIdentitySample.WebApplication.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AspNetIdentitySample.ApplicationCore\AspNetIdentitySample.ApplicationCore.csproj" />
+  </ItemGroup>
+
 </Project>
