--- a/src/AspNetIdentitySample.WebApplication/AspNetIdentitySample.WebApplication.csproj
+++ b/src/AspNetIdentitySample.WebApplication/AspNetIdentitySample.WebApplication.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\AspNetIdentitySample.ApplicationCore\AspNetIdentitySample.ApplicationCore.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
