--- a/src/AspNetIdentitySample.WebApplication/ClientApp/package.json
+++ b/src/AspNetIdentitySample.WebApplication/ClientApp/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "css-loader": "^6.7.3",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1"
   }
 }
