--- a/test/AspNetIdentitySample.Test/AspNetIdentitySample.Test.csproj
+++ b/test/AspNetIdentitySample.Test/AspNetIdentitySample.Test.csproj
@@ -18,4 +18,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\AspNetIdentitySample.WebApplication\AspNetIdentitySample.WebApplication.csproj" />
+  </ItemGroup>
+
 </Project>
