--- a/src/AspNetIdentitySample.Infrastructure/AspNetIdentitySample.Infrastructure.csproj
+++ b/src/AspNetIdentitySample.Infrastructure/AspNetIdentitySample.Infrastructure.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\AspNetIdentitySample.ApplicationCore\AspNetIdentitySample.ApplicationCore.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Cosmos" Version="7.0.2" />
+  </ItemGroup>
+
 </Project>
