add integration test for user repository

--- a/test/AspNetIdentitySample.Test/AspNetIdentitySample.Test.csproj
+++ b/test/AspNetIdentitySample.Test/AspNetIdentitySample.Test.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\..\src\AspNetIdentitySample.WebApplication\AspNetIdentitySample.WebApplication.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Unit\" />
+  </ItemGroup>
+
 </Project>
