add jquery valition

--- a/src/AspNetIdentitySample.WebApplication/ClientApp/package.json
+++ b/src/AspNetIdentitySample.WebApplication/ClientApp/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.2.3",
     "css-loader": "^6.7.3",
     "jquery": "^3.6.3",
+    "jquery-validation": "^1.19.5",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1"
