--- a/src/AspNetIdentitySample.WebApplication/ClientApp/package.json
+++ b/src/AspNetIdentitySample.WebApplication/ClientApp/package.json
@@ -17,6 +17,7 @@
     "css-loader": "^6.7.3",
     "jquery": "^3.6.3",
     "jquery-validation": "^1.19.5",
+    "jquery-validation-unobtrusive": "^4.0.0",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1"
