--- a/src/AspNetIdentitySample.WebApplication/ClientApp/package.json
+++ b/src/AspNetIdentitySample.WebApplication/ClientApp/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "css-loader": "^6.7.3",
+    "expose-loader": "^4.0.0",
     "jquery": "^3.6.3",
     "jquery-validation": "^1.19.5",
     "jquery-validation-unobtrusive": "^4.0.0",
