--- a/src/AspNetIdentitySample.WebApplication/AspNetIdentitySample.WebApplication.csproj
+++ b/src/AspNetIdentitySample.WebApplication/AspNetIdentitySample.WebApplication.csproj
@@ -19,6 +19,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AspNetIdentitySample.Infrastructure\AspNetIdentitySample.Infrastructure.csproj" />
   </ItemGroup>
 
